--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.16.4",
-    "whammy": "^0.0.1",
-    "multer": "^1.4.2",
-    "body-parser": "^1.19.0",
-    "videoshow": "^0.1.11",
-    "formidable": "^1.2.1",
     "@ffmpeg-installer/ffmpeg": "^1.0.19",
-    "fluent-ffmpeg": "^2.1.2",
-    "tmp": "^0.1.0",
+    "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
-    "sprintf": "^0.1.5"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "formidable": "^1.2.1",
+    "multer": "^1.4.2",
+    "sprintf": "^0.1.5",
+    "tmp": "^0.1.0",
+    "videoshow": "^0.1.11",
+    "whammy": "^0.0.1"
   },
   "engines": {
     "node": "8.x"
