--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "formidable": "^1.2.1",
     "multer": "^1.4.2",
     "sprintf": "^0.1.5",
+    "tar-fs": "^2.0.0",
+    "tarball-extract": "0.0.6",
     "tmp": "^0.1.0",
     "videoshow": "^0.1.11",
     "whammy": "^0.0.1"
