--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "main": "server.js",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.19",
-    "aws-sdk": "^2.548.0",
+    "aws-sdk": "^2.551.0",
     "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^1.2.1",
