--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.17.0",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^1.2.1",
+    "fs-extra": "^8.1.0",
     "multer": "^1.4.2",
     "sprintf": "^0.1.5",
     "tar-fs": "^2.0.0",
